# jpeg_Compression

./: .gitignore  CMakeLists.txt  README.md  bibliography.bib  blockManager.cpp  blockManager.h  cover.tex  main.tex  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Class Diagram/: uml.drawio
custom_implementation/: CMakeLists.txt  main.cpp
figures/: dct_values_3d.eps  last_dct_values.eps
part/: part1.tex  part2.tex
